Wed Jan 13 00:37:12 2016  Satoshi Ohmori  <sachin21dev@gmail.com>

	* man/ruby.1: fix double word typo.  [Fix GH-1194]

Wed Jan 13 00:16:47 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (iseqw_mark): as wrapped iseq is isolated from the call
	  stack, it needs to take care of its parent and ancestors, so
	  that they do not become orphans.  [ruby-core:72620] [Bug #11928]

Tue Jan 12 21:01:09 2016  Benoit Daloze  <eregontp@gmail.com>

	* common.mk: update URL and name for the Ruby spec suite.

Tue Jan 12 19:52:19 2016  sorah (Shota Fukumori)  <her@sorah.jp>

	* lib/forwardable.rb: Convert given accessors to String.

	  r53381 changed to accept only Symbol or String for accessors, but
	  there are several rubygems that pass classes (e.g. Array,
	  Hash, ...) as accessors. Prior r53381, it was accepted because Class#to_s
	  returns its class name. After r53381 given accessors are checked
	  with define_method, but it accepts only Symbol or String, otherwise
	  raises TypeError.

	      def_delegator Foo, :some_method

	  This change is to revert unexpected incompatibility. But this behavior
	  may change in the future.

Mon Jan 12 18:41:41 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* string.c: made a variable name more grammatically correct

Mon Jan 12 18:34:34 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* string.c: minor grammar fix [ci skip]

Mon Jan 12 16:09:09 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_casing_options.rb: Tests for option
	  parsing/checking for upcase/downcase/capitalize/swapcase
	  (see r53503; with Kimihito Matsui)

Mon Jan 12 16:03:03 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* string.c: Added option parsing/checking for upcase/downcase/
	  capitalize/swapcase (with Kimihito Matsui)

Mon Jan 11 21:28:28 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* include/ruby/oniguruma.h: Added flags needed for upcase/downcase
	  Unicode addition (with Kimihito Matsui)
